<resources>
    <string name="app_name">Spotify Wrapped Project #2</string>
    <string name="wrapped_23">Wrapped 23\'</string>
    <string name="wrapped_18">Wrapped 18\'</string>
    <string name="past_wraps">Past Wraps</string>
    <string name="back">Back</string>
    <string name="wrapped_19">Wrapped 19\'</string>
    <string name="wrapped_20">Wrapped 20\'</string>
    <string name="wrapped_21">Wrapped 21\'</string>
    <string name="wrapped_22">Wrapped 22\'</string>
    <string name="_1">1:</string>
    <string name="temp_top_song_name">Top Song Name</string>
    <string name="_2">2:</string>
    <string name="_3">3:</string>
    <string name="_4">4:</string>
    <string name="_5">5:</string>
    <string name="spotify_wrapped_title">Your Spotify Wrapped</string>
    <string name="your_2023_spotify_wrapped">Your 2023 Spotify Wrapped</string>
    <string name="your_2022_spotify_wrapped">Your 2022 Spotify Wrapped</string>
    <string name="your_2021_spotify_wrapped">Your 2021 Spotify Wrapped</string>
    <string name="your_2020_spotify_wrapped">Your 2020 Spotify Wrapped</string>
    <string name="your_2019_spotify_wrapped">Your 2019 Spotify Wrapped</string>
    <string name="your_2018_spotify_wrapped">Your 2018 Spotify Wrapped</string>
    <string name="album_cover_image">Album cover image</string>
    <string name="_1_month_wrapped">1 Month Wrapped</string>
    <string name="_1_week_wrapped">1 Week Wrapped</string>
    <string name="_1_year_wrapped">1 Year Wrapped</string>
    <string name="all_time_wrapped">All Time Wrapped</string>
    <string name="sign_out">Sign Out</string>
    <string name="none">None</string>
    <string name="export">Export</string>
    <string name="top_artist_name">Top Artist Name</string>
    <string name="save">Save</string>
    <string name="one_month_wrapped">One Month Wrapped</string>
    <string name="one_week_wrapped">One Week Wrapped</string>
    <string name="one_year_wrapped">One Year Wrapped</string>
</resources>