<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDB0C0"
    tools:context=".Wrapped">

    <View
        android:id="@+id/past_title_view"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/wrapped_title"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:textSize="55sp"
                android:textStyle="bold|italic"
                android:layout_gravity="center_horizontal"/>
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/musicalnote_foreground"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/temp_top_song_name"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                android:paddingTop="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                android:textSize="55sp"
                android:textStyle="bold|italic"
                android:layout_gravity="center_horizontal">
            </TextView>

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/musicalnote_foreground"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/temp_top_song_name"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                android:paddingTop="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                android:textSize="55sp"
                android:textStyle="bold|italic"
                android:layout_gravity="center_horizontal"/>

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/musicalnote_foreground"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/temp_top_song_name"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                android:paddingTop="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                android:textSize="55sp"
                android:textStyle="bold|italic"
                android:layout_gravity="center_horizontal"/>

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/musicalnote_foreground"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/temp_top_song_name"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                android:paddingTop="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                android:textSize="55sp"
                android:textStyle="bold|italic"
                android:layout_gravity="center_horizontal"/>

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/musicalnote_foreground"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/temp_top_song_name"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                android:paddingTop="20dp"/>
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/past_wrap_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/_1_year_wrapped"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold|italic" />
    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="326dp"
        android:text="@string/back" />
</RelativeLayout>