<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDB0C0"
    tools:context=".Wrapped">

    <View
        android:id="@+id/past_title_view"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/wrapped_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_below="@id/past_wrap_title">

        <LinearLayout
            android:id="@+id/songListLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Repeat this block for each top song, adjust the ids as needed -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1"
                    android:textSize="35sp"
                    android:textStyle="bold"/>

                <ImageView
                    android:id="@+id/albumCover1"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/album_cover_image" />

                <TextView
                    android:id="@+id/songTitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textSize="25sp"
                    android:text="@string/temp_top_song_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2"
                    android:textSize="35sp"
                    android:textStyle="bold"/>

                <ImageView
                    android:id="@+id/albumCover2"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/album_cover_image" />

                <TextView
                    android:id="@+id/songTitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textSize="25sp"
                    android:text="@string/temp_top_song_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_3"
                    android:textSize="35sp"
                    android:textStyle="bold"/>

                <ImageView
                    android:id="@+id/albumCover3"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/album_cover_image" />

                <TextView
                    android:id="@+id/songTitle3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/temp_top_song_name"
                    android:textSize="25sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_4"
                    android:textSize="35sp"
                    android:textStyle="bold"/>

                <ImageView
                    android:id="@+id/albumCover4"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/album_cover_image" />

                <TextView
                    android:id="@+id/songTitle4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textSize="25sp"
                    android:text="@string/temp_top_song_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5"
                    android:textSize="35sp"
                    android:textStyle="bold"/>

                <ImageView
                    android:id="@+id/albumCover5"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/album_cover_image" />

                <TextView
                    android:id="@+id/songTitle5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textSize="25sp"
                    android:text="@string/temp_top_song_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/past_wrap_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotify_wrapped_title"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold|italic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/exportButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="162dp"
        android:layout_marginTop="658dp"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="25dp"
        android:text="Export" />

</RelativeLayout>