<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDB0C0"
    android:id="@+id/myLayout"
    tools:context=".Wrapped">

    <View
        android:id="@+id/past_title_view"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/wrapped_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="130dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="80sp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/_1"
                android:textSize="50sp"
                android:textStyle="bold|italic" />

            <ImageView
                android:id="@+id/albumCover1"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/musicalnote_foreground" />

            <TextView
                android:id="@+id/songTitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="5dp"
                android:maxLines="@integer/material_motion_duration_long_1"
                android:paddingTop="20dp"
                android:text="@string/temp_top_song_name"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/_2"
                android:textSize="50sp"
                android:textStyle="bold|italic"></TextView>

            <ImageView
                android:id="@+id/albumCover2"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/musicalnote_foreground" />

            <TextView
                android:id="@+id/songTitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="5dp"
                android:maxLines="@integer/material_motion_duration_long_1"
                android:paddingTop="20dp"
                android:text="@string/temp_top_song_name"
                android:textSize="24sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/_3"
                android:textSize="50sp"
                android:textStyle="bold|italic" />

            <ImageView
                android:id="@+id/albumCover3"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/musicalnote_foreground" />

            <TextView
                android:id="@+id/songTitle3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="5dp"
                android:paddingTop="20dp"
                android:text="@string/temp_top_song_name"
                android:textSize="24sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/_4"
                android:textSize="50sp"
                android:textStyle="bold|italic" />

            <ImageView
                android:id="@+id/albumCover4"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/musicalnote_foreground" />

            <TextView
                android:id="@+id/songTitle4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="5dp"
                android:maxLines="@integer/material_motion_duration_long_1"
                android:paddingTop="20dp"
                android:text="@string/temp_top_song_name"
                android:textSize="24sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/_5"
                android:textSize="50sp"
                android:textStyle="bold|italic" />

            <ImageView
                android:id="@+id/albumCover5"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/musicalnote_foreground" />

            <TextView
                android:id="@+id/songTitle5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="5dp"
                android:maxLines="@integer/material_motion_duration_long_1"
                android:paddingTop="20dp"
                android:text="@string/temp_top_song_name"
                android:textSize="24sp"
                android:textStyle="bold|italic" />
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/past_wrap_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one_week_wrapped"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold|italic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="#505050"
        android:text="@string/back"
        android:textSize="14sp" />

</RelativeLayout>