<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222222"
    tools:context=".Wrapped">

    <View
        android:id="@+id/past_title_view"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/halloween_title"
        />

    <LinearLayout
        android:id="@+id/halloween_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="170dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:textColor="#ED7117"
                android:textSize="55sp"
                android:textStyle="bold|italic"
                android:layout_gravity="center_horizontal"/>
            <ImageView
                android:id="@+id/albumCover1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/musicalnote_foreground"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/songTitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/temp_top_song_name"
                android:textColor="#ED7117"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                android:paddingTop="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                android:textColor="#ED7117"
                android:textSize="55sp"
                android:textStyle="bold|italic"
                android:layout_gravity="center_horizontal">
            </TextView>

            <ImageView
                android:id="@+id/albumCover2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/musicalnote_foreground"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/songTitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/temp_top_song_name"
                android:textColor="#ED7117"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                android:paddingTop="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                android:textColor="#ED7117"
                android:textSize="55sp"
                android:textStyle="bold|italic"
                android:layout_gravity="center_horizontal"/>

            <ImageView
                android:id="@+id/albumCover3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/musicalnote_foreground"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/songTitle3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/temp_top_song_name"
                android:textColor="#ED7117"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                android:paddingTop="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                android:textSize="55sp"
                android:textColor="#ED7117"
                android:textStyle="bold|italic"
                android:layout_gravity="center_horizontal"/>

            <ImageView
                android:id="@+id/albumCover4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/musicalnote_foreground"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/songTitle4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/temp_top_song_name"
                android:textColor="#ED7117"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                android:paddingTop="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                android:textSize="55sp"
                android:textColor="#ED7117"
                android:textStyle="bold|italic"
                android:layout_gravity="center_horizontal"/>

            <ImageView
                android:id="@+id/albumCover5"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/musicalnote_foreground"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/songTitle5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="#ED7117"
                android:text="@string/temp_top_song_name"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                android:paddingTop="20dp"/>

        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/pumpkin_foreground" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/pumpkin_foreground"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="110dp"/>

    <TextView
        android:id="@+id/past_wrap_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotify_wrapped_title"
        android:textColor="#ED7117"
        android:textSize="32sp"
        android:textStyle="bold|italic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="12dp"
        android:backgroundTint="#505050"
        android:textSize="13sp"
        android:text="@string/back" />

</RelativeLayout>